--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: android
+
 android:
   components:
     - platform-tools
-    - build-tools-23.0.1
     - android-23
+    - build-tools-23.0.0
+
+env:
+  -  TERM=dumb
 
 script:
-   - ./gradlew build connectedCheck
+  - ./gradlew build
