--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ android:
     - platform-tools
     - android-23
     - build-tools-23.0.0
+    - extra-android-m2repository
+
+licenses:
+    - android-sdk-license-.+
 
 env:
   -  TERM=dumb
