--- a/andialog/build.gradle
+++ b/andialog/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
 publish {
-    userOrg = 'erish'
+    userOrg = 'erishforg'
     groupId = 'com.erish.andialog'
     artifactId = 'andialog'
     publishVersion = '0.2.0'
