--- a/andialog/build.gradle
+++ b/andialog/build.gradle
@@ -5,7 +5,7 @@ publish {
     userOrg = 'erishforg'
     groupId = 'com.erish.andialog'
     artifactId = 'andialog'
-    publishVersion = '0.2.0'
+    publishVersion = '0.2.1'
     desc = 'a library to help you make RateDialog easier than before'
     website = 'https://github.com/erishforG/Android-Rate-Dialog'
     issueTracker = "${website}/issues"
@@ -13,15 +13,16 @@ publish {
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
-        versionName "0.2.0"
+        versionName "0.2.1"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -31,7 +32,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:appcompat-v7:27.+'
 }
